update group model to connect with spotify auth
